--- a/frontendrev/campaign-details.html
+++ b/frontendrev/campaign-details.html
@@ -130,7 +130,7 @@
 
                     <div style="text-align: center; margin-top: 2rem;">
                         ${hasNoDonations ?
-                            `<a href="donate.html?campaign=${campaign.id}" class="btn btn-secondary" style="font-size: 1.2rem; padding: 1rem 3rem; background-color: #e74c3c; border-color: #e74c3c;">
+                            `<a href="donate.html?campaign=${campaign.id}" class="btn btn-secondary" style="font-size: 1.2rem; padding: 1rem 3rem; background-color: var(--accent-coral); border-color: var(--accent-coral); color: #fff;">
                                 Be the First to Donate!
                             </a>
                             <p style="margin-top: 1rem; color: #e74c3c; font-weight: bold;">No donations yet. Be the first to help ${campaign.patientName}!</p>` :
