--- a/frontendrev/index.html
+++ b/frontendrev/index.html
@@ -345,7 +345,7 @@
                                 <a href="campaign-details.html?id=${campaign.id}" class="btn btn-primary" style="flex: 1; text-align: center;">
                                     View Details
                                 </a>
-                                <a href="donate.html?campaign=${campaign.id}" class="btn btn-secondary" style="flex: 1; text-align: center; ${hasNoDonations ? 'background-color: #e74c3c; border-color: #e74c3c;' : ''}">
+                                <a href="donate.html?campaign=${campaign.id}" class="btn btn-secondary" style="flex: 1; text-align: center; ${hasNoDonations ? 'background-color: var(--accent-coral); border-color: var(--accent-coral); color: #fff;' : ''}">
                                     ${hasNoDonations ? 'Be First!' : 'Donate'}
                                 </a>
                             </div>
