--- a/frontendrev/admin-panel.html
+++ b/frontendrev/admin-panel.html
@@ -227,6 +227,7 @@
             <div style="display: flex; gap: 1rem; margin-bottom: 2rem; border-bottom: 2px solid #e0e0e0; flex-wrap: wrap;">
                 <button class="tab-btn active" onclick="showTab('overview')">Overview</button>
                 <button class="tab-btn" onclick="showTab('hospitals')">Hospitals</button>
+                <button class="tab-btn" onclick="showTab('verifications')">Verifications</button>
                 <button class="tab-btn" onclick="showTab('campaigns')">Campaigns</button>
                 <button class="tab-btn" onclick="showTab('users')">Users</button>
                 <button class="tab-btn" onclick="showTab('events')">Events</button>
@@ -297,6 +298,14 @@
                 </div>
             </div>
 
+            <!-- Verifications Tab -->
+            <div id="verificationsTab" class="tab-content" style="display: none;">
+                <h2 class="page-title">Patient Verifications</h2>
+                <div id="verificationRequestsList">
+                    <!-- Verification requests will be loaded here -->
+                </div>
+            </div>
+
             <!-- Campaigns Tab -->
             <div id="campaignsTab" class="tab-content" style="display: none;">
                 <h2 class="page-title">Campaign Management</h2>
@@ -336,6 +345,25 @@
         // Admin credentials (frontend-only demo)
         const ADMIN_USERNAME = 'admin';
         const ADMIN_PASSWORD = 'CancerCare2026';
+
+        function getStoredCampaigns() {
+            try {
+                const stored = JSON.parse(localStorage.getItem('campaigns') || 'null');
+                if (Array.isArray(stored)) return stored;
+                if (stored && Array.isArray(stored.campaigns)) return stored.campaigns;
+                return [];
+            } catch (e) {
+                return [];
+            }
+        }
+
+        function setStoredCampaigns(campaigns) {
+            if (typeof saveCampaigns === 'function') {
+                saveCampaigns(campaigns);
+                return;
+            }
+            localStorage.setItem('campaigns', JSON.stringify(campaigns));
+        }
 
         // Check if admin is logged in
         function checkAdminLogin() {
@@ -392,6 +420,7 @@
             // Load data for the tab
             if (tabName === 'overview') loadOverview();
             if (tabName === 'hospitals') loadHospitals();
+            if (tabName === 'verifications') loadVerificationRequests();
             if (tabName === 'campaigns') loadCampaigns();
             if (tabName === 'users') loadUsers();
             if (tabName === 'events') loadEvents();
@@ -401,7 +430,7 @@
         // Load overview data
         function loadOverview() {
             const users = JSON.parse(localStorage.getItem('userDatabase') || '[]');
-            const campaigns = JSON.parse(localStorage.getItem('campaigns') || '[]');
+            const campaigns = getStoredCampaigns();
             const events = JSON.parse(localStorage.getItem('events') || '[]');
             const eventDonations = JSON.parse(localStorage.getItem('eventDonations') || '[]');
 
@@ -499,6 +528,131 @@
 
             // Display all hospitals
             displayAllHospitals(hospitals);
+        }
+
+        function loadVerificationRequests() {
+            const requests = JSON.parse(localStorage.getItem('verificationRequests') || '[]');
+            const container = document.getElementById('verificationRequestsList');
+
+            if (requests.length === 0) {
+                container.innerHTML = '<div class="card"><p style="text-align: center; color: #666;">No verification requests yet</p></div>';
+                return;
+            }
+
+            container.innerHTML = '';
+            requests.forEach(request => {
+                const statusClass = request.status === 'approved'
+                    ? 'status-active'
+                    : request.status === 'rejected'
+                        ? 'status-rejected'
+                        : 'status-pending';
+                const statusText = request.status.charAt(0).toUpperCase() + request.status.slice(1);
+
+                const requestHTML = `
+                    <div class="pending-hospital" style="border-left-color: ${request.status === 'approved' ? '#2ecc71' : request.status === 'rejected' ? '#e74c3c' : '#f39c12'};">
+                        <h3 style="color: #2c3e50; margin-top: 0;">${request.patientName}</h3>
+                        <span class="status-badge ${statusClass}">${statusText}</span>
+
+                        <div class="hospital-details">
+                            <div class="detail-item">
+                                <strong>Email:</strong>
+                                ${request.patientEmail}
+                            </div>
+                            <div class="detail-item">
+                                <strong>Hospital:</strong>
+                                ${request.hospitalName}
+                            </div>
+                            <div class="detail-item">
+                                <strong>Campaign Title:</strong>
+                                ${request.campaignTitle}
+                            </div>
+                            <div class="detail-item">
+                                <strong>Goal Amount:</strong>
+                                ${request.goalAmount.toLocaleString()} XAF
+                            </div>
+                            <div class="detail-item">
+                                <strong>Submitted:</strong>
+                                ${new Date(request.submittedDate).toLocaleDateString()}
+                            </div>
+                        </div>
+
+                        ${request.status === 'pending' ? `
+                        <div class="action-buttons">
+                            <button class="btn-approve" onclick="approveVerification('${request.id}')">
+                                Approve Verification
+                            </button>
+                            <button class="btn-reject" onclick="rejectVerification('${request.id}')">
+                                Reject
+                            </button>
+                        </div>` : ''}
+                    </div>
+                `;
+                container.innerHTML += requestHTML;
+            });
+        }
+
+        function approveVerification(requestId) {
+            const requests = JSON.parse(localStorage.getItem('verificationRequests') || '[]');
+            const request = requests.find(r => String(r.id) === String(requestId));
+            if (!request) return;
+
+            request.status = 'approved';
+            request.approvedDate = new Date().toISOString();
+            localStorage.setItem('verificationRequests', JSON.stringify(requests));
+
+            const users = JSON.parse(localStorage.getItem('userDatabase') || '[]');
+            const userIndex = users.findIndex(u => u.email === request.patientEmail);
+            if (userIndex !== -1) {
+                users[userIndex].verified = true;
+                users[userIndex].verifiedBy = request.hospitalName;
+                localStorage.setItem('userDatabase', JSON.stringify(users));
+            }
+
+            const currentUser = JSON.parse(localStorage.getItem('currentUser') || 'null');
+            if (currentUser && currentUser.email === request.patientEmail) {
+                currentUser.verified = true;
+                currentUser.verifiedBy = request.hospitalName;
+                localStorage.setItem('currentUser', JSON.stringify(currentUser));
+            }
+
+            const campaigns = getStoredCampaigns();
+            const newCampaign = {
+                id: Date.now(),
+                title: request.campaignTitle,
+                description: request.description || 'Medical support campaign',
+                goalAmount: request.goalAmount,
+                raisedAmount: 0,
+                patientName: request.patientName,
+                patientAge: request.patientAge || null,
+                hospitalName: request.hospitalName,
+                patientEmail: request.patientEmail,
+                verified: true,
+                creationDate: new Date().toISOString(),
+                createdAt: new Date().toISOString(),
+                updatedAt: new Date().toISOString(),
+                raised: 0,
+                goal: request.goalAmount,
+                donors: 0
+            };
+            campaigns.unshift(newCampaign);
+            setStoredCampaigns(campaigns);
+
+            showAlert('Verification approved and campaign created.', 'success');
+            loadVerificationRequests();
+            loadOverview();
+        }
+
+        function rejectVerification(requestId) {
+            const requests = JSON.parse(localStorage.getItem('verificationRequests') || '[]');
+            const request = requests.find(r => String(r.id) === String(requestId));
+            if (!request) return;
+
+            request.status = 'rejected';
+            request.rejectedDate = new Date().toISOString();
+            localStorage.setItem('verificationRequests', JSON.stringify(requests));
+
+            showAlert('Verification rejected.', 'success');
+            loadVerificationRequests();
         }
 
         // Display pending hospitals
@@ -643,7 +797,7 @@
 
         // Load campaigns
         function loadCampaigns() {
-            const campaigns = JSON.parse(localStorage.getItem('campaigns') || '[]');
+            const campaigns = getStoredCampaigns();
             const container = document.getElementById('campaignsList');
 
             if (campaigns.length === 0) {
@@ -789,7 +943,7 @@
 
         // Load donations
         function loadDonations() {
-            const campaigns = JSON.parse(localStorage.getItem('campaigns') || '[]');
+            const campaigns = getStoredCampaigns();
             const eventDonations = JSON.parse(localStorage.getItem('eventDonations') || '[]');
             const container = document.getElementById('donationsList');
 
@@ -865,9 +1019,9 @@
                 return;
             }
 
-            let campaigns = JSON.parse(localStorage.getItem('campaigns') || '[]');
+            let campaigns = getStoredCampaigns();
             campaigns = campaigns.filter(c => c.id !== campaignId);
-            localStorage.setItem('campaigns', JSON.stringify(campaigns));
+            setStoredCampaigns(campaigns);
 
             showAlert('Campaign deleted successfully', 'success');
             loadCampaigns();
