--- a/frontendrev/create-account.html
+++ b/frontendrev/create-account.html
@@ -112,6 +112,7 @@
     </footer>
 
     <!-- ONLY LOAD script.js -->
+    <script src="api-client.js"></script>
     <script src="script.js"></script>
     
     <script>
@@ -172,7 +173,7 @@
         });
 
         // Handle form submission
-        document.getElementById('createAccountForm').addEventListener('submit', function(e) {
+        document.getElementById('createAccountForm').addEventListener('submit', async function(e) {
             e.preventDefault();
             
             const fullName = document.getElementById('fullName').value.trim();
@@ -199,14 +200,21 @@
                 return;
             }
 
-            // Check duplicate
-            const users = getUserDatabase();
-            if (users.some(user => user.email.toLowerCase() === email.toLowerCase())) {
-                showAlert('This email is already registered', 'error');
+            // Create user in backend
+            try {
+                await window.apiClient.request('POST', '/auth/register', {
+                    fullName,
+                    email,
+                    phone,
+                    password,
+                    accountType
+                });
+            } catch (error) {
+                showAlert(error.message || 'Registration failed', 'error');
                 return;
             }
 
-            // Save user
+            // Save user locally for current UI flow
             const userData = {
                 fullName,
                 email,
